gs-spring-boot/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gs-spring-boot
  name: gs-spring-boot
  namespace: hpe-test
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 9100
    protocol: TCP
    targetPort: 9100
  selector:
    name: gs-spring-boot
  type: ClusterIP
