gs-spring-boot/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: gs-spring-boot
  name: gs-spring-boot
  namespace: hpe-test
spec:
  to:
    kind: Service
    name: gs-spring-boot
  port:
    targetPort: 8080
